feat: add sparkling debug module for Android